# TexturePacker

./: .gitignore  BusyBar.qml  CMakeLists.txt  CompressionToolbar.qml  Compressor.cpp  Compressor.h  FileDialogItem.cpp  FileDialogItem.h  FileToolbar.qml  FlatButton.qml  FlatComboBox.qml  ImageFilepath.cpp  ImageFilepath.h  ImagePreview.qml  ImageProvider.cpp  ImageProvider.h  Main.qml  StatusMessage.qml  main.cpp  res.qrc
Ext/: CMakeLists.txt
Ext/nvtt3/: CMakeLists.txt
Ext/stb/: CMakeLists.txt
