project(nvtt3)

add_library(${PROJECT_NAME} SHARED IMPORTED GLOBAL)
target_include_directories(${PROJECT_NAME} INTERFACE
 ${CMAKE_CURRENT_SOURCE_DIR}
 )

set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/nvtt30201.lib)
set_property(TARGET ${PROJECT_NAME} PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/nvtt30201.dll)
